fixed layout issues for image manager in ie6/ie7
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@8068 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/administrator/components/com_media/assets/popup-imagelist.css
+++ b/administrator/components/com_media/assets/popup-imagelist.css
@@ -20,24 +20,35 @@
 
  html, body { margin: 0; padding: 0; font: 10px Tahoma, Verdana, sans-serif; }
 
-.item { float: left; border: 1px solid #ccc; margin: 3px; position: relative; }
+.item { float: left; border: 1px solid #ccc; margin: 3px;	 position: relative; }
 
 .item a       {
-	display: table-cell; _display: block;
-	width: 80px; height: 80px;
-	vertical-align:middle;  text-align: center;
+	display: table-cell !important;
+	display: block;
+	width: 80px; height: 90px;
+	overflow: hidden;
+	vertical-align: middle;  
+	text-align: center;
 	text-decoration: none;
 	color: black;
-}
-.item a:hover { background-color: white;  }
 
-.item img {  border: 0 none;  margin-top: expression(( 80 - this.height ) / 2);  }
+	line-height: 90px;
+}
+
+.item img { display: inline; margin-top: expression(( 80 - this.height ) / 2);}
+
+html>body .item img {margin: auto;}
+
 .item span {
-	display: block; width: 76px;
-	position: absolute; bottom: 0; padding: 2px;
-	background-color: #ddd;
-	filter:alpha(opacity=70);
-	-moz-opacity: 0.70;
-	opacity: 0.70;
+	line-height: 100%;
+	clear:both;
+	display: block; 
+	width: 100%;
+	position: absolute; 
+	bottom: 0;
+	left: 0; 
+	padding: 2px 0;
+	background-color: #eee;
+	overflow: hidden;
 }
 
