--- a/administrator/components/com_media/assets/popup-imagemanager.css
+++ b/administrator/components/com_media/assets/popup-imagemanager.css
@@ -27,7 +27,7 @@ html, body {
 
 img      { border: 0 none; }
 
-form     { padding: 0px; margin: 0 auto; width: 550px; padding-top: 5px; }
+form     { padding: 0px; margin: 0 auto; width: 530px; padding-top: 5px; }
 fieldset { margin-top: 0.5em; border: 1px solid #CCCCCC; padding-top: 10px; }
 button   { padding: 3px; border: 1px solid #CCCCCC; font-weight: bold; color: #0B55C4; background-color: white; }
 button:hover { border: 1px solid #0B55C4; }
